--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 </div>
 
-<div class="backstretch" style="left: 0px; top: 0px; overflow: hidden; margin: 0px; padding: 0px; height: 747px; width: 1440px; z-index: -999999; position: fixed;"><img src="./assets/bg1.jpg" style="position: absolute; margin: 0px; padding: 0px; border: none; width: 1440px; height: 900px; max-height: none; max-width: none; z-index: -999999; left: 0px; top: -76.5px;">
+<div class="backstretch" style="left: 0px; top: 0px; overflow: hidden; margin: 0px; padding: 0px; height: 100%; width: 100%; z-index: -999999; position: fixed;"><img src="./assets/bg1.jpg" style="position: absolute; margin: 0px; padding: 0px; border: none; width: 1440px; height: 900px; max-height: none; max-width: none; z-index: -999999; left: 0px; top: -76.5px;">
 </div>
 
 </body>
